完成订单详情页整体架构

--- a/src/components/NavLeft/index.less
+++ b/src/components/NavLeft/index.less
@@ -1,4 +1,5 @@
-.logo{
+.nav-left{
+    .logo{
     line-height: 90px;
     padding-left: 20px;
     background-color: #002140;
@@ -11,5 +12,6 @@
         display: inline-block;
         vertical-align: middle;
         margin: 0 0 0 10px;
+    }
     }
 }
