完成detail页面地图的渲染、点击地图获取坐标并设置起终点、路径规划、遮罩区多边形绘制

--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -1,8 +1,8 @@
-@import '/src/style/default.less';
+@import '../../style/default.less';
 
 .footer{
-    height:100px;
-    padding:40px 0;
-    text-align: center;
-    color: @colorJ;
+  text-align: center;
+  height: 100px;
+  padding: 40px 0;
+  color:@colorJ
 }
