--- a/src/components/NavLeft/index.less
+++ b/src/components/NavLeft/index.less
@@ -1,17 +1,16 @@
-.nav-left{
-    .logo{
+.logo{
+  line-height: 90px;
+  padding-left: 20px;
+  
+  img {
+    height: 35px;
+  }
+  h1{
+    color:#fff;
+    font-size: 20px;
+    display: inline-block;
     line-height: 90px;
-    padding-left: 20px;
-    background-color: #002140;
-    img{
-        height: 35px;
-    }
-    h1{
-        color:#ffffff;
-        font-size: 20px;
-        display: inline-block;
-        vertical-align: middle;
-        margin: 0 0 0 10px;
-    }
-    }
+    vertical-align: middle;
+    margin: 0 0 0 10px;
+  }
 }
